--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,12 +1,20 @@
 bidict==0.22.0
 click==8.1.3
 Flask==2.1.2
+Flask-Cors==3.0.10
 Flask-SocketIO==5.1.2
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
+h11==0.13.0
 importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 python-engineio==4.3.2
 python-socketio==5.6.0
+simple-websocket==0.5.2
+six==1.16.0
+SQLAlchemy==1.4.36
 Werkzeug==2.1.2
+wsproto==1.1.0
 zipp==3.8.0
